--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
+    <div class="body-wrapper"></div>
     <script src="./js/index.js" async defer></script>
   </body>
 </html>
