--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <div class="body-wrapper"></div>
-    <script src="./js/index.js" async defer></script>
+    <script src="./js/index.js" type="module" async defer></script>
   </body>
 </html>
