--- a/index.html
+++ b/index.html
@@ -17,31 +17,33 @@
     <header class="dusty-pink" style="height: 60px"></header>
     <main style="min-height: 100px">
       <!-- Page Layout here -->
-      <div class="row">
-        <div class="col s3 grey" id="sidebar">
-          <!-- Grey navigation panel -->
-        </div>
-
-        <div class="col s9">
-          <div class="row">
-            <div class="col s12 m6">
-              <div class="card sky-blue">
-                <div class="card-content white-text">
-                  <span class="card-title">Card Title</span>
-                  <p>
-                    I am a very simple card. I am good at containing small bits
-                    of information. I am convenient because I require little
-                    markup to use effectively.
-                  </p>
-                </div>
-                <div class="card-action">
-                  <a href="#">This is a link</a>
-                  <a href="#">This is a link</a>
+      <div class="container" id="search-container">
+        <div class="row">
+          <div class="col s12">
+            <div class="row">
+              <div class="col s12 12">
+                <div class="card sky-blue">
+                  <div class="card-content white-text">
+                    <span class="card-title">Card Title</span>
+                    <input
+                      id="city-search"
+                      type="text"
+                      placeholder="Enter a City name (Ex: Fargo)"
+                      value="Fargo"
+                    />
+                  </div>
+                  <div class="card-action">
+                    <a href="#">This is a link</a>
+                    <a href="#">This is a link</a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
+      <div class="container" id="results-container">
+        <p id="results">null</p>
       </div>
     </main>
     <footer class="page-footer">
