--- a/index.html
+++ b/index.html
@@ -23,18 +23,17 @@
             <div class="row">
               <div class="col s12 12">
                 <div class="card sky-blue">
-                  <div class="card-content white-text">
-                    <span class="card-title">Card Title</span>
+                  <div class="card-content">
+                    <span class="card-title">Search City:</span>
                     <input
                       id="city-search"
                       type="text"
-                      placeholder="Enter a City name (Ex: Fargo)"
+                      placeholder="Ex: Fargo"
                       value="Fargo"
                     />
                   </div>
-                  <div class="card-action">
-                    <a href="#">This is a link</a>
-                    <a href="#">This is a link</a>
+                  <div class="card-action search-button">
+                    <a href="#" id="search">SEARCH</a>
                   </div>
                 </div>
               </div>
