Add click handler to search, restructure fs with import/exports, start data sanitizer function

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                       id="city-search"
                       type="text"
                       placeholder="Ex: Fargo"
-                      value="Fargo"
+                      value="fargo"
                     />
                   </div>
                   <div class="card-action search-button">
