--- a/index.html
+++ b/index.html
@@ -20,29 +20,31 @@
       <div class="container" id="search-container">
         <div class="row">
           <div class="col s12">
-            <div class="row">
-              <div class="col s12 12">
-                <div class="card sky-blue">
-                  <div class="card-content">
-                    <span class="card-title">Search City:</span>
-                    <input
-                      id="city-search"
-                      type="text"
-                      placeholder="Ex: Fargo"
-                      value="fargo"
-                    />
-                  </div>
-                  <div class="card-action search-button">
-                    <a href="#" id="search">SEARCH</a>
-                  </div>
-                </div>
+            <div class="card">
+              <div class="card-content">
+                <span class="card-title">Search City:</span>
+                <input
+                  id="city-search"
+                  type="text"
+                  placeholder="Ex: Fargo"
+                  value="fargo"
+                />
+              </div>
+              <div class="card-action search-button">
+                <a href="#" id="search">SEARCH</a>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="container" id="results-container">
-        <p id="results">null</p>
+        <div class="row">
+          <div class="col s12">
+            <div class="card">
+              <div class="card-content" id="results-container">
+                <span class="card-title" id="results-title"></span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="page-footer">
