add code review comments

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 />
               </div>
               <div class="card-action search-button">
+                <!-- //! should use a button here instead, since we're not linking to anything -->
                 <a href="#" id="search">SEARCH</a>
               </div>
             </div>
