Implement more of the fragment builder, bugfixes

--- a/index.html
+++ b/index.html
@@ -30,19 +30,17 @@
                   value="fargo"
                 />
               </div>
-              <div class="card-action search-button">
-                <!-- //! should use a button here instead, since we're not linking to anything -->
+              <button class="card-action search-button">
+                <!-- todo - Style this better -->
                 <a href="#" id="search">SEARCH</a>
-              </div>
+              </button>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col s12">
             <div class="card">
-              <div class="card-content" id="results-container">
-                <span class="card-title" id="results-title"></span>
-              </div>
+              <div class="card-content" id="results-container"></div>
             </div>
           </div>
         </div>
