--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
             <div class="card">
               <div class="card-content">
                 <span class="card-title">Search City:</span>
-                <input
-                  id="city-search"
-                  type="text"
-                  placeholder="Ex: Fargo"
-                  value="fargo"
-                />
+                <input id="city-search" type="text" placeholder="Ex: Fargo" />
               </div>
               <button class="card-action search-button">
                 <!-- todo - Style this better -->
@@ -40,7 +35,11 @@
         <div class="row">
           <div class="col s12">
             <div class="card">
-              <div class="card-content" id="results-container"></div>
+              <div
+                class="card-content"
+                id="results-container"
+                style="display: none"
+              ></div>
             </div>
           </div>
         </div>
